# apk-downloader

./: .gitignore  README.md
appgallery-downloader/: .gitignore  README.md  appgallery_downloader.py  test_downloader.py
appgallery-downloader/docs/superpowers/plans/: 2026-06-15-appgallery-downloader.md
appgallery-downloader/docs/superpowers/specs/: 2026-06-15-appgallery-downloader-design.md
gpdownloader/: .gitignore  README.md  pyproject.toml  requirements.txt
gpdownloader/config/: config.example.toml
gpdownloader/gpdownloader/: __init__.py  cli.py  config.py  downloader.py
