[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gpdownloader"
version = "0.1.0"
description = "输入包名从 Google Play 下载 APK 样本（封装 apkeep，含凭证自动换取、批量下载、SHA-256 校验与 Windows 栈溢出修复）"
requires-python = ">=3.10"

[project.scripts]
gpdownloader = "gpdownloader.cli:main"

[tool.setuptools.packages.find]
include = ["gpdownloader*"]
